Release for MR3 1.7
Configuration changes include:

- hive-site.xml
  hive.vectorized.adaptor.usage.mode : chosen --> all
  hive.auto.convert.join.noconditionaltask.size : 1145044992 --> 4000000000
  hive.query.reexecution.stats.persist.scope : (unset) --> query

- mr3-site.xml:
  mr3.am.staging.dir.check.ownership.permission : true --> false

- tez-site.xml:
  tez.runtime.compress.codec : org.apache.hadoop.io.compress.GzipCodec --> org.apache.hadoop.io.compress.SnappyCodec
  tez.runtime.pipelined.sorter.lazy-allocate.memory : false --> true
  tez.shuffle-vertex-manager.enable.auto-parallel : false --> true